# reinforcement-learning

./: .gitignore  README.md  cross-entropy-policy.py  environment.yml  pyproject.toml
lib/: playground.py
src/agents/planning/: dyna_q_planning__maze.py  mcts__play_go.py  rollout__play_go.py
src/agents/tabular/: v_learning__frozen_lake.py
src/agents/values/: dqn_attention__minigrid.py
src/envs/: Doom.py  FrozenLake.py  FrozenLake_Custom.py  GridWorld.py  GridWorldGym.py  Mario.py  MiniGrid.py  TinyGrid.py  atari.py  bandits.py  custom_gym.py  custom_gyms.py  wrappers.py
src/envs/configs/: doom__my_way_home_custom.cfg
src/learn-action-values/: dqn__grid_world.py  q_learning__multi_arm_contextual_bandit.py
src/learn-policy/: a2c__cart_pole.py  cross-entropy-policy.py  cross-entropy-policy__cart_pole.py  reinforce__cart_pole.py  reinforce_baseline__cart_pole.py
src/learn-tabular/: dyna_q_planning__maze.py  dyna_q_plus_planning__shortcut_maze.py  q_learning__multi_arm_contextual_bandit.py  q_planning__grid.py  td_learning__cliff_walking_grid.py
src/learn-values/: categorical_dqn__atari.py  categorical_dqn__pong.py  dqn__atari.py  dqn__grid_world.py  dqn__pong.py  dqn_attention__minigrid.py  q_learning__multi_arm_contextual_bandit.py  v_learning__frozen_lake.py
src/lib/: calc.py  data_structures.py  grids.py  playground.py  plots.py  replay_buffers.py  rng.py  tracking.py  utils.py
src/models/: dyna_q.py  intrinsic_curiosity_module.py  relational_model.py
src/other/: gan_generate_atari.py
src/plan-tabular/: mcts__play_go.py  rollout__play_go.py  rollout__worker.py
src/policy/: cross-entropy-policy.py
src/value/: q_learning__multi_arm_bandit.py  q_learning__multi_arm_contextual_bandit.py
test/: test_calc.py  test_distributions.py  test_replay_buffers.py
